--- a/package.json
+++ b/package.json
@@ -191,9 +191,11 @@
     "test:production-node14": "cross-env NODE_ENV=production yarn test:node14",
     "test:production-standalone": "cross-env TEST_STANDALONE=1 yarn test:production",
     "test:production-standalone-node14": "cross-env TEST_STANDALONE=1 yarn test:production-node14",
-    "test:production-browser": "cross-env  NODE_ENV=production TEST_RUNTIME=browser yarn test",
-    "test:production-browser:chrome": "cross-env TEST_RUNTIME_BROWSER=chrome yarn test:production-browser",
-    "test:production-browser:firefox": "cross-env TEST_RUNTIME_BROWSER=firefox yarn test:production-browser",
+    "test:production:browser": "cross-env TEST_RUNTIME=browser yarn test:production",
+    "test:production:browser:chrome": "cross-env TEST_RUNTIME_BROWSER=chrome yarn test:production:browser",
+    "test:production:browser:firefox": "cross-env TEST_RUNTIME_BROWSER=firefox yarn test:production:browser",
+    "test:production:browser:chrome:umd": "cross-env TEST_BUNDLE_FORMAT=umd yarn test:production:browser:chrome",
+    "test:production:browser:firefox:umd": "cross-env TEST_BUNDLE_FORMAT=umd yarn test:production:browser:firefox",
     "test:production-lint": "eslint dist --config=./scripts/production-eslint-config.js --quiet --format friendly",
     "perf": "yarn && yarn build && cross-env NODE_ENV=production node ./dist/prettier/bin/prettier.cjs",
     "perf:inspect": "yarn && yarn build && cross-env NODE_ENV=production node --inspect-brk ./dist/prettier/bin/prettier.cjs",
